--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
   "name": "grocery-app-node",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "prestart": "start mongod --dbpath ./db",
-    "start": "SET Node_ENV=development& nodemon ./bin/www",
-    "test": ""
-  },
-  "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "mongoose": "^5.2.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^5.0.1",
-    "nodemon": "^1.17.5"
+    "prestart": "start& cd server& npm start",
+    "start": "start& cd client& npm start",
+    "test": "",
+    "mongodb": "start& cd server& npm run mongodb",
+    "dev-client": "cd client& npm start",
+    "dev-server": "cd server& npm run dev"
   }
 }
